# norske-kommuner

./: .pre-commit-config.yaml  README.md  pyproject.toml  tox.ini
.devcontainer/: devcontainer.json
norske_kommuner/: kommuner.py  models.py
norske_kommuner/resources/: fylkeskommuner.json  openapi.json
resources/: fylkeskommuner.json  openapi.json
tests/: main_test.py
