[tool.poetry]
name = "norske-kommuner"
version = "0.1.0"
description = ""
authors = ["Anders Steen <anders.steen@knowit.no>"]
readme = "README.md"
packages = [{include = "norske_kommuner"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
pydantic = "^1.10.2"


[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"


[tool.poetry.group.dev.dependencies]
datamodel-code-generator = "^0.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
